# electric

./: .cursor-ignore  Cargo.toml  README.md
.cursor/: ai-rules.md  settings.json  tasks.json
src/: main.rs
